--- a/typescript/packages/subsurface-viewer/package.json
+++ b/typescript/packages/subsurface-viewer/package.json
@@ -46,6 +46,7 @@
         "@equinor/eds-icons": "^0.21.0",
         "@turf/simplify": "^7.1.0",
         "@vivaxy/png": "^1.3.0",
+        "@webgpu/types": "^0.1.49",
         "@webviz/wsc-common": "*",
         "ajv": "^8.16.0",
         "convert-units": "^2.3.4",
