--- a/typescript/package.json
+++ b/typescript/package.json
@@ -120,7 +120,8 @@
         "typedoc": "^0.25.12",
         "typescript": "^5.4.3",
         "url-loader": "^4.1.1",
-        "vue-style-loader": "^4.1.3"
+        "vue-style-loader": "^4.1.3",
+        "webpack-wgsl-loader": "^1.0.3"
     },
     "peerDependencies": {
         "react": "^17 || ^18",
@@ -135,5 +136,9 @@
     },
     "workspaces": [
         "packages/*"
-    ]
+    ],
+    "dependencies": {
+        "@luma.gl/webgpu": "^9.0.27",
+        "wgpu-matrix": "^3.3.0"
+    }
 }
